--- a/src/service/package.json
+++ b/src/service/package.json
@@ -12,7 +12,7 @@
   "license": "UNLICENSED",
   "repository": {
     "type": "git",
-    "url": "https://github.com/reaktor/storyblok-external-content.git"
+    "url": "git+https://github.com/reaktor/storyblok-external-content.git"
   },
   "dependencies": {
     "@fastify/cors": "^8.3.0",
@@ -42,5 +42,8 @@
     "sinon-chai": "^3.7.0",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
