--- a/src/service/package.json
+++ b/src/service/package.json
@@ -7,6 +7,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc --build",
+    "prepublishOnly": "cp ../../readme.md .",
     "test": "mocha 'src/**/*.test.ts'"
   },
   "license": "UNLICENSED",
