--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,9 +20,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run service tests
-        run: npm -w src/service test
+        run: npm -w packages/service test
       - name: Run plugin tests
-        run: npm -w src/plugin test --watch=false --coverage
+        run: npm -w packages/plugin test --watch=false --coverage
 
   publish-service:
     runs-on: ubuntu-latest
@@ -41,17 +41,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build sources
-        run: npm -w src/service run build
+        run: npm -w packages/service run build
       - name: Check for changes in service directory
         id: check-changes
         run: |
-          if git diff --quiet HEAD^ HEAD -- ./src/service/; then
+          if git diff --quiet HEAD^ HEAD -- ./packages/service/; then
             echo "::set-output name=changed::false"
           else
             echo "::set-output name=changed::true"
           fi
       - name: Publish package
         if: steps.check-changes.outputs.changed == 'true'
-        run: npm -w src/service publish
+        run: npm -w packages/service publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
